fixing navbar. still needs alignment fix

--- a/src/components/SectionCards/Awards/Awards.css
+++ b/src/components/SectionCards/Awards/Awards.css
@@ -1,9 +1,13 @@
-.star {
+li.star {
   list-style: none;
   margin-bottom: 5px;
 }
 
-.star::before {
+li.star::before {
   content: '\2B50';
   margin-right: 20px;
+}
+
+.no-bullet {
+  list-style: none;
 }
